# cubature-cpp

./: CMakeLists.txt  README.md  cubature.c  cubature.h  cubature.hpp  cubature.ipp  test.c  test.cpp
